# ChessTournamentManager

./: .env  Cargo.toml  README.md  docker-compose.yaml
api/: Cargo.toml  Dockerfile  Rocket.toml  default.conf
api/src/: main.rs
nginx/: Dockerfile  default.conf
web_app/: Cargo.toml  Dockerfile  default.conf  index.html
web_app/src/: main.rs
website/: Cargo.toml  Dockerfile
website/src/: main.rs
